# PDFAgentialConversion

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  OVERVIEW.md  STACK.md  STRUCTURE.md  TESTING.md  entrypoints.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-repo-and-planning-bootstrap/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-package-extraction-and-wrapper-parity/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-visibility-and-gate-reliability/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-restore-the-canonical-holdout/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-cross-book-extractor-closure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
skills/pdf-to-structured-markdown/: SKILL.md
(+115 files in other folders)
