[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmd"
version = "0.1.0"
description = "Infrastructure and tooling for structured scholarly PDF conversion and validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=5.0.0",
  "PyMuPDF>=1.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

